samples/_failures_safe/1761316467_7dd999_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d4f05fb.c: In function ‘main’:
./samples/SAFE/__tmp_8d4f05fb.c:160:16: error: expected ‘)’ at end of input
  160 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_8d4f05fb.c:160:5: error: too few arguments to function ‘add_edge’
  160 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_8d4f05fb.c:95:5: note: declared here
   95 | int add_edge(struct Graph* g, int from_id, int to_id, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_8d4f05fb.c:160:5: error: expected declaration or statement at end of input
  160 |     add_edge(&g
      |     ^~~~~~~~
